--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,6 +5,8 @@ html,
 body {
   height: 100%;
   /* The html and body elements cannot have any padding or margin. */
+  background-color: black;
+  color: white;
 }
 
 /* Wrapper for page content to push down footer */
@@ -21,9 +23,18 @@ body {
 #footer {
   height: 60px;
 }
-#footer {
-  background-color: #f5f5f5;
+.navbar-default, #footer {
+  background-color: #222222;
   padding: 0;
+}
+
+a:focus {
+    color: white;
+}
+
+.dropdown {
+    background-color: #222222;
+    color: white;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
